--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
             A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs. This is because paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the reader see the organization of the essay and grasp its main points.
         </p>
     </div>
+    <div>
+        <h3>Push  incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaning full comment"</li>
+            <li>git Push</li>
+        </ul>
+    </div>
 </body>
 </html>
