--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
             <li>git Push</li>
         </ul>
     </div>
+    <div>
+        <h3>Image</h3>
+        <img src="image/insaat-jo6f4x1t.png" alt="">
+        <img src="image/download.jpeg" alt="">
+    </div>
 </body>
 </html>
